# emergence_software

./: .gitignore  README.md  env.example  fake_data.json  local.db  main.py  pyproject.toml  seed_script.py
config/: db.py
src/models/: __init__.py  project_model.py
src/routes/: chat_bot_route.py  site_data_routes.py
src/schemas/: __init__.py  request_model.py  response_models.py
src/services/: open_router.py
src/utils/: __init__.py  extract_resume.py
